src/assets/sass/components/cart/shipping.scss
.step-buttons {
  width: 530px;
  margin: 0 auto;
  border: 2px solid map_get($ucx-colors, deep-orange);
  padding: 10px;
  border-radius: 50px;
  background-color: transparent;

  @include mobile {
    width: 100%;
  }

  progress {
    .progress {
      width: 500px;
      margin: 0 auto;
      height: 20px;

    }
  }
}

.checkout-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 10px 0;
  padding-left: 25px;
  padding-right: 25px;

  h2 {
    color: map-get($ucx-colors, light-orange);
  }

  h3 {
    color: map-get($ucx-colors, light-orange);
  }
}

label.checkout-label {
  color: map-get($ucx-colors, light-orange);
}

.nav-buttons-shipping {
  background: transparent;
  padding: 5px;
  padding-left: 10px;
  padding-right: 10px;
  border: 1px solid map-get($ucx-colors, light-orange);
  border-radius: 5px;
  margin: 0px;
  font-size: 14px;
  color: map-get($ucx-colors, light-orange);

  &:hover {
    background: map-get($ucx-colors, light-orange);
    color: white;
    border-color: transparent !important;
  }
}

.shipping-form-container {
  height: 100%;
  margin-left: 40px;
  padding: 1vh;
  a {
    word-break: break-all;
  }
}

.shipping-image {
  height: 40vh;
  width: auto;
}

#shipping-select-country {
  min-width: 300px;
}

.shipping-address-form {
  input {
    min-width: 100px;
  }

  #shipping-select-country {
    min-width: 100px;
    max-width: 100%;
  }
}

.account-header {
  color: #FF5A09;
  background-color: transparent;
  padding: 40px;
  border: 2px solid #FF5A09;
  border-radius: 10px;
  @include mobile{
    padding: 25px;
  }
}

.shipping-nav-buttons {
  a {
    background-color: #1f2833;
    border-color: #FF5A09;
    color: #ffffff;
    margin-left: 10px;
    margin-right: 10px;
  }
  button{
    background-color: #1f2833;
    border-color: #FF5A09;
    color: #ffffff;
  }
}

#existing-address-form {
  select {
    width: 100%;
  }
}

#use-my-address {
  margin-left: 0;
  margin-right: 0;
  background: yellow;
}

.shipping-wrapper {
  padding: 0px;

  .steam-icon {
    color: white;
    font-size: 240px;
    padding-right: 20px;
  }
}

.no-float {
  float: none;
}

.add-addresses-container-btn {
  width: 100%;
  height: 100px;
}

#box-address-shipping {
  margin-right: 25px;
  margin-left: -25px;
}

.steam-icon {
  &:hover {
    transform: scale(1);
  }
}

.shipping-form-container {
  h1 {
    #title {
      color: orange;
    }
  }

  .customer-email {
    color: #3273dc;
  }

  .alertion {
    color: #ffffff;
  }
}

